k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devsecops-project
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: devsecops-project
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - port: 3000
      targetPort: 3000
  # ClusterIP: NGINX Ingress routes external traffic here — no need for LoadBalancer per pod
  type: ClusterIP
